--- a/README.adoc
+++ b/README.adoc
@@ -2,6 +2,12 @@
 Contains project Ideas and code related to an event named "Infinity" held at Pramati
 :toc:
 
+== Getting Started
+
+. git clone https://github.com/textLove/textlove.git
+. npm install
+. node bin/noclusterwww.js
+
 == Ideas
 
 === TextLove
